Bug 30952: Fix spacing of nested fieldsets
Issue #42

--- a/koha-tmpl/intranet-tmpl/prog/css/src/_forms.scss
+++ b/koha-tmpl/intranet-tmpl/prog/css/src/_forms.scss
@@ -1,3 +1,10 @@
+fieldset {
+    fieldset {
+        box-shadow: none;
+        padding: 0;
+    }
+}
+
 fieldset.rows ol {
     $label-width: 12rem;
     $gap-width: 1rem;
