--- a/koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
+++ b/koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
@@ -970,10 +970,6 @@ fieldset {
             padding: .3em 0;
         }
     }
-
-    fieldset {
-        box-shadow: none;
-    }
 }
 
 details {
